# agent-tether

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
src/agent_tether/: __init__.py  base.py  manager.py  subscriber.py  text_command_bridge.py  thread_naming.py
src/agent_tether/discord/: bot.py
src/agent_tether/runner/: __init__.py
src/agent_tether/slack/: bot.py
src/agent_tether/telegram/: bot.py  formatting.py  state.py
tests/: test_bridge_config.py  test_bridge_interface.py  test_discord_pairing.py  test_manager.py  test_runner_protocol.py  test_subscriber.py  test_telegram_formatting.py  test_telegram_state.py  test_text_command_bridge.py  test_thread_state.py
