[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tether"
version = "1.0.0"
description = "Chat platform bridges for AI agent supervision"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Lars de Ridder", email = "lars@xithing.io" },
]
keywords = ["ai", "agent", "telegram", "slack", "discord", "approval", "human-in-the-loop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
slack = ["slack-sdk>=3.0", "slack-bolt>=1.0"]
discord = ["discord.py>=2.0"]
all = [
    "python-telegram-bot>=21.0",
    "slack-sdk>=3.0",
    "slack-bolt>=1.0",
    "discord.py>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "black",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/larsderidder/agent-tether"
Repository = "https://github.com/larsderidder/agent-tether"
Issues = "https://github.com/larsderidder/agent-tether/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tether"]

[tool.hatch.build.targets.sdist]
exclude = [
    "PACKAGE_PLAN.md",
    "PACKAGE_PLAN_REVISED.md",
    "STATUS.md",
    "SUMMARY.md",
    "GITHUB_SETUP.md",
    "NEXT_STEPS.md",
    "PUBLISHING.md",
    "READY_TO_PUBLISH.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
